# WIFI-Controlled-Robot

./: .gitignore  DC_Motor.c  DC_Motor.h  Encoder.c  Hello_World.uvprojx  LCD.c  LED.c  LED.h  Macros.h  Stepper_Motor.c  Stepper_Motor.h  SysTick.c  UART.c  UART.h  hello-world.uvprojx  main.c  stm32f303xe.h  system_stm32f3xx.c
Controller/: myjoystick.c  received.c
ControllerV2/: .anjuta_sym_db.db  INSTALL  configure  configure.ac
ControllerV2/src/: Makefile.am  Makefile.in  main.c
Documents/: Command Protocol.xlsx  Nucleo to Board coloured pinout.xlsx  Status Report Template.doc  (+1 more)
Linux/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
Linux/.anjuta/session/: anjuta.session  dock-layout.xml
Linux/Debug/: Makefile  config.h  config.status  libtool
Linux/Debug/po/: Makefile  Makefile.in  POTFILES
Linux/Debug/src/: Makefile  linux
Linux/Debug/src/.deps/: commands.Po  interface.Po  main.Po  receive.Po
Linux/autom4te.cache/: output.0  output.1  requests  traces.1
Linux/src/: Makefile.am  Makefile.in  commands.c  commands.h  interface.c  interface.h  main.c  main.c~  receive.c  receive.h
Modular/: Makefile  (+7 more)
Modular/src/: Makefile  Makefile.am  Makefile.in  commands.c  controller.c  controller.h  interface.c  interface.h  main.c  modularize  pipes.h  sockets.c  sockets.h  uart.c
Modular/src/.deps/: buffers.Po  commands.Po  controller.Po  interface.Po  main.Po  modularize-buffers.Po  modularize-commands.Po  modularize-controller.Po  modularize-interface.Po  modularize-main.Po  modularize-pipes.Po  modularize-sockets.Po  modularize-uart.Po  pipes.Po  sockets.Po  uart.Po
(+136 files in other folders)
