## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = modularize

modularize_SOURCES = \
	main.c \
	pipes.h \
	pipes.c \
	buffers.h \
	buffers.c \
	controller.h \
	controller.c \
	errorhandle.h \
	commands.h \
	commands.c \
	interface.h \
	interface.c \
	uart.h \
	uart.c

modularize_LDFLAGS = 

modularize_LDADD = 

